Fixes #49 - or works around it. How: readme mentions